# EDD_Proyecto

./: CMakeLists.txt  Makefile  README.md  compile.bat
src/: main.cpp
src/csvReader/: csvReader.cpp  csvReader.hpp
src/mafiaFamily/: mafiaTree.cpp  mafiaTree.hpp
src/scenes/: scenes.hpp
